--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/react-fontawesome": "^0.1.8",
     "@types/node": "^13.1.4",
     "@types/react": "^16.9.17",
     "@types/styled-components": "^4.4.1",
     "@zeit/next-css": "^1.0.1",
+    "easy-peasy": "^3.2.6",
     "fslightbox-react": "^1.4.7",
     "gray-matter": "^4.0.2",
     "markdown-to-jsx": "^6.10.3",
