--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "@types/react": "^16.9.17",
     "@types/styled-components": "^4.4.1",
     "@zeit/next-css": "^1.0.1",
+    "dayjs": "^1.8.19",
     "easy-peasy": "^3.2.6",
     "fslightbox-react": "^1.4.7",
     "gray-matter": "^4.0.2",
     "markdown-to-jsx": "^6.10.3",
-    "next": "^9.1.7",
+    "next": "^9.3.3",
     "pure-react-carousel": "^1.24.1",
     "raw-loader": "^4.0.0",
     "react": "^16.12.0",
